--- a/easyexcel-core/pom.xml
+++ b/easyexcel-core/pom.xml
@@ -40,5 +40,11 @@
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.19</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
